--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
     "name": "gheevel/phpplugin",
-    "description": "A simple > PHP5.3 plugin system supporting plugin descriptor files and extension points. It is inspired by the eclipse and jira plugin architectures.
-    In combination with a dependency manager (Composer), a module system (for example Symfony bundles) and a depency injection framework (for example the Symfony service container)
-    this provides a very powerfull way of building a pluggable architecture in a PHP application. It can be easily extended to filter loaded plugins
-    based on your own criteria which allows for different levels op application functionalities (maybe based on subscription level).",
+    "description": "A simple > PHP5.3 plugin system supporting plugin descriptor files and extension points. It is inspired by the eclipse and jira plugin architectures. In combination with a dependency manager (Composer), a module system (for example Symfony bundles) and a depency injection framework (for example the Symfony service container) this provides a very powerfull way of building a pluggable architecture in a PHP application. It can be easily extended to filter loaded plugins based on your own criteria which allows for different levels op application functionalities (maybe based on subscription level).",
     "license": "MIT",
     "homepage": "https://github.com/gheevel/PHPPlugin",
     "authors": [
